--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
   <meta name="twitter:image" content="https://the-horse.education/assets/img/og-image.webp">
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="assets/css/fonts.min.css?ewfwg" />
+  <link rel="stylesheet" href="assets/css/fonts.min.css" />
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link href="assets/fonts/all.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
   <link rel="stylesheet" href="assets/css/votingup.min.css">
   <link href="assets/css/Project-List.min.css" rel="stylesheet" />
-  <link href="assets/css/styles.min.css?v=3.0" rel="stylesheet" />
+  <link href="assets/css/styles.min.css" rel="stylesheet" />
   <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
   <link href="assets/fonts/font-awesome.min.css" rel="stylesheet" />
-  
+ 
+
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <!--<link rel="manifest" href="/site.webmanifest">-->
