sitemap, SEO updates, minor text upd.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="index.html" style="color: #e78224;" 
+        <a class="navbar-brand js-scroll-trigger" href="/" style="color: #e78224;" 
            title="The Horse Education Association - collaborations across borders">
           THE ! association
         </a>
@@ -1046,7 +1046,7 @@
       <ul class="list-inline">
         <li class="list-inline-item">
           <a href="https://su-pa.net" target="_blank" rel="noopener" class="lnkCopy">
-            © <span style="color:goldenrod">su-pa.net</span> created 11/2019, last updated 24 July 2024
+            © <span style="color:goldenrod">su-pa.net</span> created 11/2019, last updated 27 February 2025
           </a>
         </li>
       </ul>
