section partners, jump link

--- a/index.html
+++ b/index.html
@@ -899,8 +899,8 @@
       </div>
     </section>
 
-    <!-- Sponsors &amp; Partners Section -->
-    <section id="sponsors" class="team-clean" style="text-align:center;">
+    <!-- Sponsors Section -->
+    <section id="sponsors" class="team-clean" style="text-align:center;padding-bottom:0;">
       <div class="container">
         <div class="intro">
           <h2 class="text-center" style="font-size: 2.5em; color:#212529; margin-bottom:0.6em;">Sponsors</h2>
@@ -968,10 +968,13 @@
           </div>
         </div>
       </div>
-      <div class="team-clean" style="text-align:center; margin-top:2.9em">
+      </section>
+
+      <!-- Partners Section -->
+      <section id="partners" class="team-clean" style="text-align:center;">
         <div class="container">
           <div class="intro">
-            <h2 class="text-center" style="font-size: 2.5em; color:#212529; margin-bottom:0.6em;">Partners 2024, 2025</h2>
+            <h2 id="partners" class="text-center" style="font-size: 2.5em; color:#212529; margin-bottom:0.6em;">Partners 2024, 2025</h2>
           </div>
           <div class="row people">
             <div class="col-md-6 col-lg-4 item">
@@ -1000,7 +1003,6 @@
             </div>
           </div>
         </div>
-      </div>
     </section>
   </main>
 
